feat: add clientId to service provider reviews response
